--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,11 +72,12 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-compose:$nav_compose_version"
+
+    implementation "com.airbnb.android:lottie-compose:$lottieVersion"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
 
     testImplementation 'junit:junit:4.13.2'
 
